--- a/Source/EtAlii.ML.Aore.Admin/EtAlii.ML.Aore.Admin.csproj
+++ b/Source/EtAlii.ML.Aore.Admin/EtAlii.ML.Aore.Admin.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Aspects" />
+    <Folder Include="Concepts" />
+  </ItemGroup>
+
 </Project>
