--- a/Source/EtAlii.ML.Aore.Service/EtAlii.ML.Aore.Service.csproj
+++ b/Source/EtAlii.ML.Aore.Service/EtAlii.ML.Aore.Service.csproj
@@ -5,11 +5,36 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server"/>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0"/>
+    <Protobuf Include="Aspects\AspectsGrpcService.proto">
+      <GrpcServices>Server</GrpcServices>
+      <Access>Public</Access>
+      <ProtoCompile>True</ProtoCompile>
+      <CompileOutputs>True</CompileOutputs>
+      <OutputDir>obj\Debug\net5.0\</OutputDir>
+      <Generator>MSBuild:Compile</Generator>
+    </Protobuf>
+    <Protobuf Include="Concepts\ConceptsGrpcService.proto">
+      <GrpcServices>Server</GrpcServices>
+      <Access>Public</Access>
+      <ProtoCompile>True</ProtoCompile>
+      <CompileOutputs>True</CompileOutputs>
+      <OutputDir>obj\Debug\net5.0\</OutputDir>
+      <Generator>MSBuild:Compile</Generator>
+    </Protobuf>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Concepts\ConceptsGrpcService.cs">
+      <DependentUpon>ConceptsGrpcService.proto</DependentUpon>
+    </Compile>
+    <Compile Update="Aspects\AspectsGrpcService.cs">
+      <DependentUpon>AspectsGrpcService.proto</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
